--- a/jumpscare.html
+++ b/jumpscare.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-  <title>Dla Adiego</title>
+  <title>jumpscare</title>
 </head>
 <style>
 #jumpscare {position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; cursor: pointer; visibility: hidden;}
